# task-manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose-vars.env  docker-compose.yml  pyproject.toml  vars.env
.github/workflows/: build-push-image.yml  linting.yml
app/: main.py  settings.py
app/api/: common.py  router.py
app/api/endpoints/: tasks.py  types.py  users.py
app/db/: crud.py  session.py
app/db/models/: tasks.py  users.py
deploy/manifests/k8s/: task-manager.yml
deploy/manifests/openshift/: task-manager.yml
deploy/podman_quadlet/: task-manager-app.container  task-manager-db.container  task-manager.network
manifests/k8s/: README.md
manifests/openshift/: README.md
