[project]
name = "task-manager"
version = "0.0.1"
description = "A task manager web application"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
    "fastapi",
    "psycopg2-binary",
    "sqlalchemy",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "black",
    "python-dotenv",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["."]


[tool.black]
line-length = 100
target_version = ["py311", "py312"]

[tool.mypy]
disable_error_code = ["union-attr"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
